# tb-api-backend

./: .env.example  .gitignore  Dockerfile  README.md  alarm_aggregation_scheduler.py  alarm_logic.py  calculated_telemetry.py  config.py  daily_counters.py  docker-compose.yml  live_counters.py  main.py  pack_format.py  pyproject.toml  render.yaml  report_logic.py  requirements-dev.txt  requirements.txt  thingsboard_auth.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SETUP.md
scripts/: health_check.py  migrate.py  setup_env.sh
src/: config.py  main.py
src/api/: dependencies.py
src/api/routes/: alarms.py  devices.py  health.py  reports.py  telemetry.py
src/core/: auth.py  exceptions.py  logging.py
src/db/: models.py  repository.py
src/models/: alarm.py  report.py  telemetry.py
src/services/: aggregation_service.py  alarm_service.py  counter_service.py  report_service.py  telemetry_service.py  thingsboard_service.py
src/tasks/: alarm_scheduler.py  task_runner.py
src/utils/: converters.py  parsers.py
tests/: test_alarms.py  test_reports.py  test_telemetry.py
